<resources>
    <string name="app_name" translatable="false">DailyQuest</string>
    <string name="get_started">Get Started</string>

    <string name="your_name">Your name</string>
    <string name="your_age">Your age</string>
    <string name="your_height">Your height</string>
    <string name="your_weight">Your weight</string>

    <string name="log_in">Log in</string>
    <string name="required">Required*</string>

    <string name="error_age_limit">Age cannot be greater than 125</string>
    <string name="error_height_limit">Height cannot be greater than 250 cm</string>
    <string name="error_weight_limit">Weight cannot be greater than 650 kg</string>

    <string name="error_fill_all_fields">Please fill out all fields</string>

    <string name="daily_quest">Daily Quest</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="welcome_to">Welcome to</string>
    <string name="dailyquest" translatable="false">Daily<b>Quest</b></string>
    <string name="hey_there_enter_your_details">Hey there,\n<b>Enter your details</b></string>
    <string name="hey_there_edit_your_details"><b>Edit your details</b></string>
    <string name="edit">Edit</string>

    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="cm">cm</string>
    <string name="yo">yo</string>
    <string name="kg">kg</string>

    <string name="other">Other</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="login_successful">Successful!</string>
    <string name="done">Done</string>
    <string name="add_new_quest">Add New Quest</string>
    <string name="day_streak">Day Streak: %1$d</string>
    <string name="ok">Ok</string>
    <string name="cancelb">Cancel</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="view_more">View More</string>
    <string name="bmi_body_mass_index">BMI (Body Mass Index)</string>
    <string name="you_are_underweight">You are underweight</string>
    <string name="you_have_a_normal_weight">You have a normal weight</string>
    <string name="you_are_overweight">You are overweight</string>
    <string name="you_are_obese">You are obese</string>
    <string name="check">Check</string>
    <string name="today_quest">Today Quest</string>
    <string name="bmi_recommendations">BMI Recommendations</string>
    <string name="bmi_info">Your BMI is: %.1f.\n%s</string>

    <string name="bmi_underweight_recommendation">Your BMI is below normal. Try to eat more nutrient-rich foods and consult a nutritionist for personalized advice.</string>
    <string name="bmi_normal_recommendation">Your BMI is within a healthy range. Maintain your current lifestyle with a balanced diet and regular exercise.</string>
    <string name="bmi_overweight_recommendation">You are slightly overweight. Incorporate more physical activity into your routine and consider a balanced diet. Consult a healthcare provider if necessary.</string>
    <string name="bmi_obese_recommendation">You are in the obese range. It is important to consult a doctor or healthcare professional for a detailed health plan, which may include dietary changes and increased physical activity.</string>

    <string name="delete">Delete</string>
    <string name="normal_quests">Daily Quests</string>
    <string name="custom_quests">Custom Quests</string>
    <string name="please_complete_all_quests">Please complete all quests!</string>
    <string name="push_ups">Push-ups</string>
    <string name="sit_ups">Sit-ups</string>
    <string name="squats">Squats</string>
    <string name="distance">Distance</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="you_ve_already_confirmed_all_quests_today">You\'ve already confirmed all quests today!</string>
    <string name="confirm_all_quests">Confirm All Quests</string>
    <string name="save">Save</string>

    <string name="repetitions">Repetitions</string>
    <string name="enter_quest_name">Enter quest name</string>
    <string name="upper_body">Upper Body</string>
    <string name="full_body_stretching">Full Body Stretching</string>

    <string name="_30_minutes_1000_kcal_5_exercises">30 Minutes, 1000 Kcal, 5 Exercises</string>
    <string name="_20_minutes_1240_kcal_5_exercises">20 Minutes, 1240 Kcal, 5 Exercises</string>
    <string name="workout">Workout</string>
    <string name="strength_training">Strength Training</string>
    <string name="cardio_for_legs">Cardio For Legs</string>

    <string name="_55_minutes_1400_kcal_6_exercises">55 Minutes, 1400 Kcal, 6 Exercises</string>
    <string name="_30_minutes_1340_kcal_6_exercises">30 Minutes, 1340 Kcal, 6 Exercises</string>
    <string name="time_to_complete_your_daily_fitness_quests">Time to complete your daily fitness quests!</string>
    <string name="chat_assistant">Chat Assistant</string>
    <string-array name="sex_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="goal_options">
        <item>Lose Weight</item>
        <item>Gain Muscle Mass</item>
        <item>Maintain Fitness</item>
    </string-array>

    <string-array name="phys_level_options">
        <item>Sedentary</item>
        <item>Light</item>
        <item>Moderate</item>
        <item>Active</item>
    </string-array>

    <string-array name="complexity_levels">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string name="next">Next</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="data_saved">Data saved!</string>
    <string name="Fill_in_all_fields">Fill in all fields</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="setup_profile_hint">Let\'s set up your profile for the best experience</string>
    <string name="setup_profile_greeting">Welcome to DailyQuest!</string>
    <string name="enter_correct_age">Enter a valid age (10-100)</string>
    <string name="n_years">%1$s years</string>
    <string name="start">Start</string>
    <string name="choose_sex">Select sex</string>
    <string name="enter_height">Enter height from 100 to 250 cm</string>
    <string name="n_cm">%1$s cm</string>
    <string name="n_kg">%1$s kg</string>
    <string name="enter_weight">Enter weight from 30 to 200 kg</string>
    <string name="cont">Continue</string>
    <string name="n30_years">30 years</string>
    <string name="finish">Finish</string>
    <string name="what_name">What is your name?</string>
    <string name="your_sex">Your sex</string>
    <string name="your_goal">Your goal</string>
    <string name="n170_cm">170 cm</string>
    <string name="physical_activity_level">Physical activity level</string>
    <string name="_70_kg">70 kg</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="gain_muscle_mass">Gain Muscle Mass</string>
    <string name="maintain_fitness">Maintain Fitness</string>
    <string name="choose_goal">Please choose a goal</string>
    <string name="sedentary">Sedentary</string>
    <string name="light">Light</string>
    <string name="moderate">Moderate</string>
    <string name="active">Active</string>
    <string name="choose_phys_level">Please choose a physical activity level</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="complexity_hint">Complexity</string>
    <string name="notification">Notification</string>
    <string name="notif_on">Notifications enabled</string>
    <string name="notif_off">Notifications disabled</string>
    <string name="your_gender">Your Gender</string>
    <string name="your_activity_level">Your Activity Level</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="please_fill_all_required_fields">Please fill all required fields</string>
    <string name="name_too_long">Name must be 12 characters or less</string>
    <string name="invalid_age">Age must be between 10 and 100</string>
    <string name="invalid_height">Height must be between 100 and 250 cm</string>
    <string name="invalid_weight">Weight must be between 30 and 200 kg</string>
    <string name="no_allow">The permission for notifications has not been granted.</string>
    <string name="about_description">Learn more about the app</string>
    <string name="contact_our_support">Contact our support</string>
    <string name="steps">Steps</string>
    <string name="days">Days</string>
    <string name="steps_not_reached">Need %d more steps to complete quests</string>
    <string name="all_quests_completed">All quests completed!</string>
    <string name="steps_progress">Steps: %d/%d</string>
    <string name="quest_completed">Quest completed!</string>
    <string name="steps_amount">%d steps</string>


    <!-- Quest Names -->
    <string name="quest_walk">Walk</string>
    <string name="quest_jumping_jacks">Jumping Jacks</string>
    <string name="quest_push_ups">Push-ups</string>
    <string name="quest_squats">Squats</string>
    <string name="quest_plank">Plank</string>
    <string name="quest_stretch">Stretch</string>

    <!-- Complexity Levels -->
    <string name="complexity_easy">Easy</string>
    <string name="complexity_moderate">Moderate</string>
    <string name="complexity_hard">Hard</string>

    <!-- Quest Status -->
    <string name="completed">Completed</string>
    <string name="in_progress">In Progress</string>
    <string name="undo">Undo</string>
    <string name="homeprof">Home</string>
    <!-- Notification Strings -->
    <string name="quest_reminders">Quest Reminders</string>
    <string name="daily_quests_reminder">Daily Quests Reminder</string>
    <string name="uncompleted_quests">You have uncompleted quests for today!</string>
    <string name="day_streak_0">Day streak: 0</string>

    <string name="quest_high_knees">High Knees</string>
    <string name="quest_bicycle_crunches">Bicycle Crunches</string>
    <string name="quest_lunges">Lunges</string>
    <string name="quest_sit_ups">Sit-ups</string>
    <string name="gym">Gym</string>
    <string name="choose_training_location">Please choose a training location</string>
    <string name="quest_treadmill">Treadmill Running</string>
    <string name="quest_bench_press">Bench Press</string>
    <string name="quest_deadlift">Deadlift</string>
    <string name="quest_lat_pulldown">Lat Pulldown</string>
    <string name="quest_leg_press">Leg Press</string>
    <string name="quest_reminder_message">You still have time to complete your daily quests and keep your streak!</string>
    <string name="calories">Calories</string>
    <string name="daily_progress">Daily Progress</string>
    <string name="add">Add</string>
    <string name="step_counter">Step Counter</string>
    <string name="counting_your_steps">Counting your steps...</string>
</resources>