<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile.EditProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_profile_Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hey_there_edit_your_details"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:textStyle="normal"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                app:counterEnabled="true"
                app:counterMaxLength="12"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginName"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:autofillHints="name"
                    android:drawablePadding="8dp"
                    android:hint="@string/your_name"
                    android:inputType="text"
                    android:maxLength="12"
                    android:padding="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginAge"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:drawablePadding="8dp"
                    android:hint="@string/your_age"
                    android:inputType="number"
                    android:maxLength="3"
                    android:padding="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginHeight"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:drawablePadding="8dp"
                    android:hint="@string/your_height"
                    android:inputType="number"
                    android:maxLength="3"
                    android:padding="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginWeight"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:drawablePadding="8dp"
                    android:hint="@string/your_weight"
                    android:inputType="number"
                    android:maxLength="3"
                    android:padding="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Gender Dropdown -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                app:endIconMode="dropdown_menu"
                android:hint="@string/your_gender">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/loginGender"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:inputType="none"
                    android:padding="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Goal Dropdown -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                app:endIconMode="dropdown_menu"
                android:hint="@string/your_goal">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/loginGoal"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:inputType="none"
                    android:padding="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Activity Level Dropdown -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                app:endIconMode="dropdown_menu"
                android:hint="@string/your_activity_level">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/loginActivityLevel"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:inputType="none"
                    android:padding="8dp" />

            </com.google.android.material.textfield.TextInputLayout>
            <RadioGroup
                android:id="@+id/training_location_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/gym_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gym"
                    android:textSize="16sp"
                    android:padding="8dp" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/home_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/homeprof"
                    android:textSize="16sp" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/edit_profile_Btn"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/done"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>